--- a/Lab_10_1/MainWindow.xaml
+++ b/Lab_10_1/MainWindow.xaml
@@ -17,7 +17,7 @@
             <MenuItem Header="File">
                 <MenuItem Header="New"/>
                 <MenuItem Header="Open .." Click="MenuItem_Click"/>
-                <MenuItem Header="Save .."/>
+                <MenuItem Header="Save .." Click="MenuItem_Click_Save"/>
                 <MenuItem Header="Save as .."/>
                 <Separator/>
                 <MenuItem Header="Exit"/>
